--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* Fonts Linked */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
@@ -6,4 +12,53 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+/* Fonts End */
+
+/* Common Button Effect */
+
+.cm-btn{
+    background: linear-gradient(45deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1));
+    padding: 12px 16px;
+    border: none;
+    border-radius: 50px;
+}
+
+/* Header Navigation Start */
+header{
+    max-width: 1600px;
+    background-color: #412567;
+    height: 92px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-gdn{
+    background: linear-gradient(to top, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.nav-container{
+    width: 80%;
+    margin: 0 auto;
+    color: white;
+}
+.nav-container nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-container nav ul{
+    display: flex;
+    list-style-type: none;
+    gap: 32px;
+
+}
+.nav-container nav ul li a{
+    text-decoration: none;
+    color: white;
+
+}
+.nav-container nav ul li a:hover{
+    color: #007bff;
 }
