--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,15 @@
     padding: 12px 16px;
     border: none;
     border-radius: 50px;
+    color: white;
+}
+
+.ucm-btn{
+    border: 2px solid #00FF88;
+    padding: 12px 16px;
+    color: #00FF88;
+    border-radius: 50px;
+    background: none;
 }
 
 /* Header Navigation Start */
@@ -61,4 +70,68 @@ header{
     background: linear-gradient(to top, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1));
     background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+/* Navigation End */
+
+/* Hero Section Start */
+.hero-container{
+    width: 100%;
+    max-width: 1600px;
+    height: 760px;
+    background-image: url(../assets/hero-bg.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    text-align: center;
+}
+
+.mic{
+    position: relative;
+    display: inline-block;
+}
+.img1{
+    display: block;
+    position: relative;
+    }
+.img2{
+    position: absolute;
+    top: 25%;
+    left: 33.5%;
+}
+.badge {
+    position: relative;
+    z-index: 2;
+    top: 10%;
+    right: -30%;
+    background: #00FF88;
+    color: black;
+    padding: 8px 16px;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 20px;
+    box-shadow: 0px 3px 27px 0px rgba(0, 255, 136, 0.5);
+}
+
+.hero-content{
+    margin-top: 40px;
+}
+.hero-content h1{
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.hero-content p{
+    font-size: 20px;
+    margin-bottom: 24px;
+}
+
+.hero-btn{
+    display: flex;
+    justify-content: center;
+    gap: 8px;
 }
