Why Choose TechWave section added and a icon added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@
 
 /* Header Navigation Start */
 header{
-    max-width: 1600px;
+    max-width: 1920px;
     background-color: #1A0B2E;
     height: 92px;
     display: flex;
@@ -62,22 +62,17 @@ header{
 .nav-container nav h2{
     font-size: 2rem;
 }
-.navigation-ham{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 20rem;
-}
-.navigation-ham ul{
+
+.nav-container ul{
     display: flex;
     list-style-type: none;
     gap: 32px;
 }
-.navigation-ham ul li a{
+.nav-container ul li a{
     text-decoration: none;
     color: white;
 }
-.navigation-ham ul li a:hover{
+.nav-container ul li a:hover{
     background: linear-gradient(to top, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1));
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -116,7 +111,7 @@ header{
 /* Hero Section Start */
 .hero-container{
     width: 100%;
-    max-width: 1600px;
+    max-width: 1920px;
     height: 760px;
     background-image: url(../assets/hero-bg.png);
     background-repeat: no-repeat;
@@ -131,8 +126,8 @@ header{
 }
 
 .mic{
-    height: 350px;
-    width: 350px;
+    height: 21.875rem;
+    width: 21.875rem;
     position: relative;
     display: inline-block;
 }
@@ -183,7 +178,7 @@ header{
 /* About Section Start */
 
 .about-container{
-    max-width: 1600px;
+    max-width: 1920px;
     background-color: #1A0B2E;
     height: 646px;
     color: white;
@@ -229,4 +224,68 @@ header{
 .ab-cards p{
     font-size: 1rem;
     text-align: center;
+}
+/* About Section End */
+
+/* Why Choose TechWave Section Start */
+
+.wct-container{
+    max-width: 1920px;
+    height: 1121px;
+    background-color: #230E3D;
+    color: white;
+    padding: 7.5rem 12.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.wct-container h1{
+    margin-bottom: 2.25rem;
+}
+
+.wct-content .grid-parent{
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 1.875rem;
+}
+
+/* Common Cards Style for Childs */
+.g-child{
+    background-color: rgba(53, 17, 101, 0.4);
+    border-radius: 2.5rem;
+    padding: 2.5rem;
+    display: flex;
+    text-align: left;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+.g-child img{
+    width: 3.75rem;
+    height: auto;
+}
+.g-child h2{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.g-child p{
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
+.grid-child-1{
+    grid-row: span 2;
+    
+}
+
+.grid-child-2, .grid-child-3, .grid-child-4{
+    grid-column: span 2;
+}
+.grid-child-5{
+    grid-row: span 1;
 }
