--- a/styles/styles.css
+++ b/styles/styles.css
@@ -396,6 +396,7 @@ header{
     border-radius: 2rem;
     align-items: center;
     padding: 0.625rem;
+    cursor: pointer;
 }
 
 /* Featured Episodes Section End */
