--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,13 @@ body{
     border-radius: 50px;
     color: white;
     cursor: pointer;
+    transition: 1s ease;
+}
+.cm-btn:hover{
+    background: #00FF88;
+    transform: scale(1.1);
+    transition: 1s;
+    color: #1A0B2E;
 }
 
 .ucm-btn{
@@ -37,6 +44,15 @@ body{
     border-radius: 50px;
     background: none;
     cursor: pointer;
+    transition: 1s ease;
+}
+
+.ucm-btn:hover{
+    background: linear-gradient(45deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1));
+    border: none;
+    color: white;
+    transform: scale(1.1);
+    transition: 1s;
 }
 
 /* Header Navigation Start */
@@ -132,7 +148,14 @@ header{
 .img1{
     height: 100%;
     width: 100%;
+    animation: spin 5s infinite linear;
     }
+
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
 .img2{
     position: absolute;
     top: 50%;
@@ -140,6 +163,7 @@ header{
     transform: translate(-50%, -50%);
 }
 .badge {
+    z-index: 1;
     position: absolute;
     top: 5%;
     left: 75%;
@@ -169,7 +193,7 @@ header{
 .hero-btn{
     display: flex;
     justify-content: center;
-    gap: 8px;
+    gap: 12px;
 }
 /* Hero Section Responsive */
 @media screen and (max-width: 576px){
